# hand-gesture-regonition

./: .gitignore  GEMINI.md  README.md  main.py  pyproject.toml  v1_README.md
data/left_move_up/: 0.gesture  1.gesture  10.gesture  11.gesture  12.gesture  13.gesture  14.gesture  15.gesture  2.gesture  3.gesture  4.gesture  5.gesture  6.gesture  7.gesture  8.gesture  9.gesture
data/left_ok/: 0.gesture  1.gesture  10.gesture  11.gesture  12.gesture  13.gesture  14.gesture  15.gesture  16.gesture  17.gesture  18.gesture  19.gesture  2.gesture  20.gesture  21.gesture  22.gesture  23.gesture  24.gesture  3.gesture  4.gesture  5.gesture  6.gesture  7.gesture  8.gesture  9.gesture
data/left_one/: 0.gesture  1.gesture  10.gesture  11.gesture  12.gesture  13.gesture  14.gesture  15.gesture  16.gesture  17.gesture  18.gesture  19.gesture  2.gesture  20.gesture  21.gesture  22.gesture  23.gesture  24.gesture  25.gesture  3.gesture  4.gesture  5.gesture  6.gesture  7.gesture  8.gesture  9.gesture
data/left_thumb_down/: 0.gesture  1.gesture  10.gesture  11.gesture  12.gesture  13.gesture  14.gesture  15.gesture  16.gesture  17.gesture  18.gesture  19.gesture  2.gesture  3.gesture  4.gesture  5.gesture  6.gesture  7.gesture  8.gesture  9.gesture
data/left_thumb_up/: 0.gesture  1.gesture  10.gesture  11.gesture  12.gesture  13.gesture  (+17 more)
hand_gesture_regonition/: __init__.py  __main__.py  dataset.py  gesture.py  gesture_commands.py  gesture_recorder.py  gesture_regonition.py  hands_overlay.py  home_assistant_commands.py  input.py  network.py  process.py  program.py  trainer.py
(+1594 files in other folders)
